--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'com.google.zxing:core:3.3.2'
+    implementation('com.journeyapps:zxing-android-embedded:4.3.0') { transitive = false }
+    implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
 }
